# ComonadSheet

./: .gitignore  ComonadSheet.cabal  Getting My Fix of Comonads.html  Getting My Fix of Comonads.md  Getting a Quick Fix on Comonads.md  LICENSE  ListZipper.hs  NumericInstances.hs  PlaneZipper.hs  README.md  presentation.css  presentation.md
Notes/: Extensions used and rationale.md  Miscellaneous notes.md  Notes about ComonadApply and Indexed zippers.md  The great package reorganization.md
Old/: OldGeneric.hs  Z3.hs
Presentation/: TOC.txt  make-presentation.sh  presentation.md
src/: All.hs  Cartesian.hs  Checked.hs  ComonadComposition.hs  ComonadSheet.cabal  Composition.hs  CountedList.hs  Evaluate.hs  Examples.hs  Generic.hs  Indexed.hs  IndexedList.hs  Insert.hs  LICENSE  ListZipper.hs  Manipulate.hs  Miscellaneous notes.txt  Names.hs  Nested.hs  NumericInstances.hs  Peano.hs  PlaneZipper.hs  Reference.hs  ReferenceExperiments.hs  Safe.hs  Slice.hs  StrangeLoopSpaces.cabal  Stream.hs  TaggedList.hs  Tape.hs  Unchecked.hs  UncheckedExamples.hs  Z1.hs  Z2.hs  Z3.hs  Z4.hs
src/Control/Comonad/: Sheet.hs
src/Control/Comonad/Sheet/: Examples.hs  Indexed.hs  Manipulate.hs  Names.hs  Reference.hs
src/Data/Functor/: Nested.hs
src/Data/List/: Indexed.hs  IndexedList.hs
src/Data/List/Indexed/: Conic.hs  Counted.hs
src/Data/Numeric/Witness/: Peano.hs
src/Data/Stream/: Tape.hs
src/Notes/: Architectural Thoughts.txt  Comonad instance for Nested.txt  Notes about ComonadApply and Indexed zippers.txt
src/Old/: Checked.hs  DatatypeExperiments.hs  OldHybridChecked.hs  Unchecked.hs  UncheckedExamples.hs  Z1.hs
