name:                ComonadSheet
version:             0.3.0.0
stability:           experimental
homepage:            https://github.com/kwef/ComonadSheet
synopsis:            A library for expressing "spreadsheet-like" computations with absolute and relative references, using fixed-points of n-dimensional comonads.
-- description:         
-- license:             
-- license-file:        LICENSE
author:              Kenneth Foner
maintainer:          kenny.foner@gmail.com
bug-reports:         https://github.com/kwef/ComonadSheet/issues
copyright:           Copyright: (c) 2013-2014 Kenneth W. Foner
category:            Control
build-type:          Simple
cabal-version:       >=1.10

library

  exposed-modules:
      Data.List.Indexed,
      Data.List.Indexed.Counted,
      Data.List.Indexed.Conic,
      Control.Comonad.Sheet.Indexed,
      Control.Comonad.Sheet.Names,
      Data.Numeric.Witness.Peano,
      Control.Comonad.Sheet.Reference,
      Control.Comonad.Sheet.Manipulate,
      Data.Stream.Tape,
      Control.Comonad.Sheet

  other-extensions:
      FlexibleContexts,
      FlexibleInstances,
      GADTs,
      MultiParamTypeClasses,
      UndecidableInstances,
      LambdaCase,
      RankNTypes,
      StandaloneDeriving,
      ConstraintKinds,
      DataKinds,
      ScopedTypeVariables,
      TypeFamilies,
      TypeOperators,
      PolyKinds,
      DeriveFunctor,
      TupleSections

  build-depends:
      base >=4.7,
      comonad >=4.0,
      distributive >=0.1,
      transformers >=0.3,
      applicative-numbers >= 0.1.3,
      Stream >=0.4,
      NestedFunctor >= 0.2,
      containers >=0.5

  default-language:    Haskell2010
