name:                StrangeLoopSpaces
version:             0.3.0.0
-- synopsis:            
-- description:         
-- license:             
-- license-file:        LICENSE
author:              Kenneth Foner
maintainer:          kenny.foner@gmail.com
-- copyright:           
category:            Control
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library

  exposed-modules:
      All,
      Cartesian,
      CountedList,
      Examples, 
      Indexed,
      Insert,
      Names,
      Nested,
      Peano,
      Reference,
      Slice,
      Stream,
      TaggedList,
      Tape,
      Unchecked

  other-extensions:
      FlexibleContexts,
      FlexibleInstances,
      GADTs,
      MultiParamTypeClasses,
      UndecidableInstances,
      LambdaCase,
      RankNTypes,
      StandaloneDeriving,
      ConstraintKinds,
      DataKinds,
      ScopedTypeVariables,
      TypeFamilies,
      TypeOperators,
      PolyKinds,
      DeriveFunctor,
      TupleSections,
      FunctionalDependencies

  build-depends:
      base >=4.7,
      comonad >=4.0,
      distributive >=0.1,
      transformers >=0.3,
      applicative-numbers >= 0.1.3,
      Stream >=0.4,
      containers >=0.5

  default-language:    Haskell2010
