name:                StrangeLoopSpaces
version:             0.3.0.0
stability:           experimental
homepage:            https://github.com/kwef/Strange-Loop-Spaces
synopsis:            A library for expressing "spreadsheet-like" computations with absolute and relative references, using fixed-points of n-dimensional comonads.
-- description:         
-- license:             
-- license-file:        LICENSE
author:              Kenneth Foner
maintainer:          kenny.foner@gmail.com
bug-reports:         https://github.com/kwef/Strange-Loop-Spaces/issues
copyright:           Copyright: (c) 2013-2014 Kenneth W. Foner
category:            Control
build-type:          Simple
cabal-version:       >=1.10

library

  exposed-modules:
      All,
      IndexedList,
      Examples, 
      Indexed,
      Names,
      Nested,
      Peano,
      Reference,
      Manipulate,
      Tape,
      Evaluate

  other-extensions:
      FlexibleContexts,
      FlexibleInstances,
      GADTs,
      MultiParamTypeClasses,
      UndecidableInstances,
      LambdaCase,
      RankNTypes,
      StandaloneDeriving,
      ConstraintKinds,
      DataKinds,
      ScopedTypeVariables,
      TypeFamilies,
      TypeOperators,
      PolyKinds,
      DeriveFunctor,
      TupleSections

  build-depends:
      base >=4.7,
      comonad >=4.0,
      distributive >=0.1,
      transformers >=0.3,
      applicative-numbers >= 0.1.3,
      Stream >=0.4,
      containers >=0.5

  default-language:    Haskell2010
